<resources>
    <string name="app_name">Test App</string>
    <string name="shape_text_select">Select the shape:</string>
    <string name="circle">circle</string>
    <string name="triangle">triangle</string>
    <string name="square">square</string>
    <string name="shape_text_size">Select the size of the shape:</string>
    <string name="shape_default_progress">70 %</string>
    <string name="shape_draw_button">Draw shape</string>
    <string name="main_button_speech">Text to speech</string>
    <string name="main_button_shapes">Shapes</string>
    <string name="speech_edit_text">Write your text here.</string>
    <string name="speech_button">Read text</string>
    <string-array name="language_array">
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Italian</item>
    </string-array>
</resources>
